<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/edit_text_task_name_placeholder"
        android:inputType="textNoSuggestions"
        android:maxLength="64"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Task Name" />

    <EditText
        android:id="@+id/edtTaskDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edit_text_task_description_placeholder"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLength="256"
        app:layout_constraintEnd_toEndOf="@+id/edtTaskName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edtTaskName"
        app:layout_constraintTop_toBottomOf="@+id/edtTaskName"
        tools:text="Task Description" />

    <EditText
        android:id="@+id/edtTaskSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/edit_text_task_sort_order_placeholder"
        android:inputType="numberSigned"
        android:maxLength="9"
        app:layout_constraintStart_toStartOf="@+id/edtTaskDescription"
        app:layout_constraintTop_toBottomOf="@+id/edtTaskDescription"
        tools:text="1" />

    <Button
        android:id="@+id/btnSaveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:text="@string/button_task_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTaskSortOrder" />
</androidx.constraintlayout.widget.ConstraintLayout>