<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        app:layout_constraintEnd_toStartOf="@+id/txtTaskStartDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/heading_durations_report_task_name_label" />

    <TextView
        android:id="@+id/txtTaskStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTaskName"
        app:layout_constraintEnd_toStartOf="@+id/txtTaskDuration"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/txtTaskName"
        tools:text="@string/heading_durations_report_task_start_date_label" />

    <TextView
        android:id="@+id/txtTaskDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTaskStartDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/txtTaskStartDate"
        tools:text="@string/heading_durations_report_task_duration_label" />
</androidx.constraintlayout.widget.ConstraintLayout>