<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/txtNameHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="?attr/colorButtonNormal"
        android:padding="4dp"
        android:text="@string/heading_durations_report_task_name_label"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtStartDateHeading"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtStartDateHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="?attr/colorButtonNormal"
        android:padding="4dp"
        android:text="@string/heading_durations_report_task_start_date_label"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtNameHeading"
        app:layout_constraintEnd_toStartOf="@+id/txtDurationHeading"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/txtNameHeading" />

    <TextView
        android:id="@+id/txtDurationHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="?attr/colorButtonNormal"
        android:padding="4dp"
        android:text="@string/heading_durations_report_task_duration_label"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtStartDateHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/txtStartDateHeading" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listTasksDurations"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameHeading"
        tools:itemCount="10"
        tools:listitem="@layout/list_tasks_durations_item" />
</androidx.constraintlayout.widget.ConstraintLayout>